# vegan-buddies

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  develop.sh  docker-compose.yaml  screencasts.yaml  shell.nix
SOLVExTHESExPROBLEMS/: PT1-chat-widgets-for-android-and-ios.md
design/: authentification-flows.xoj
matrix-geographic-user-index/: Cargo.toml  Dockerfile  watch
matrix-geographic-user-index/design/: bot-development-and-test.xoj  user-locations.xoj
matrix-geographic-user-index/migrations/2022-03-22-174935_create_posts/: up.sql
matrix-geographic-user-index/src/: lib.rs  main.rs  models.rs  recall_log.md  schema.rs
matrix-geographic-user-index/src/ageing_cellar/: README.md  autojoin_rooms_event_handler.rs  matrix_adapter.rs  mod.rs
matrix-geographic-user-index/src/archive/: README.md
matrix-geographic-user-index/src/blackhole/bug/unclear-unreproduced/: README.md
matrix-geographic-user-index/src/blackhole/feature/edge/: README.md
matrix-geographic-user-index/src/blackhole/feature/roadmap/: LOOKUP_USER.md  LOOKUP_USER_SORTING.md  RATE_USER.md  REGISTER.md  REPORT.md  USER_RATINGS.md
matrix-geographic-user-index/src/finished/: README.md
matrix-geographic-user-index/src/public_archive/: README.md
matrix-geographic-user-index/src/work_table/: README.md  mod.rs
matrix-geographic-user-index/test-data/: bot-config.toml
screencasts/: 2022-09-06-60d98902-1180-449b-8cb6-466dc0d505a7.yaml  2022-09-17-c0bdcca4-cbc3-4ef1-8ba9-46638473c1cf.yaml  2022-09-23-c46b926d-b340-4b76-9d31-48041e7c9a20.yaml  2022-10-02-95269c8c-beb5-4e88-a9aa-545113bcd4c5.yaml  2022-10-09-0bc7135f-4213-4af4-ba68-606659886317.yaml  (+2 more)
util/matrix-bot-tester/: Cargo.toml  test.py
util/matrix-bot-tester/src/: args.rs  autojoin_rooms_event_handler.rs  lib.rs  main.rs
util/matrix-bot-tester/src/types/: mod.rs  room_to_connect.rs
util/matrix-bot-tester/test-data/: bot-config.yaml  bot-replay-fail.yaml  bot-replay.yaml  bot_config.toml  client-config.yaml  client-replay-matrix-addapter-test.yaml  client-replay.yaml
(+53 files in other folders)
