[package]
name = "matrix-bot-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
config = "0.9.3"
matrix-sdk = "0.4.1"
url = "2.2.2"
tokio = { version ="1.19.2", features = ["macros", "io-util", "rt-multi-thread"]}
